<resources>
    <string name="app_name">My Application</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="clear">C</string>
    <string name="mul">*</string>
    <string name="equal">=</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="textview">TextView</string>
    <string name="x">x</string>
    <string name="btnzero">btnzero</string>
    <string name="btndot">btndot</string>
    <string name="btnmul">btnmul</string>
    <string name="btnadd">btnadd</string>
    <string name="btnsub">btnsub</string>
    <string name="btndiv">btndiv</string>
    <string name="brackets">()</string>
    <string name="and">^</string>
</resources>