<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/purple_200"
    android:padding="30dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#263238"
        android:textSize="50sp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#263238"
        android:textSize="50sp"
        android:gravity="end"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_clear"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_bracktes"
            android:text="@string/brackets"
            android:textStyle="bold"
            android:padding="15sp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:id="@+id/btn_and"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:background="@drawable/click_effect"
            android:padding="15dp"
            android:text="@string/x"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn1"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2"
            android:text="@string/_2"
            android:textStyle="bold"
            android:padding="15sp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:id="@+id/btn3"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnadd"
            android:background="@drawable/click_effect"
            android:padding="15dp"
            android:text="@string/add"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:id="@+id/btn4"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:id="@+id/btn5"
            android:textStyle="bold"
            android:padding="15sp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:id="@+id/btn6"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_effect"
            android:padding="15dp"
            android:id="@+id/btnsub"
            android:text="@string/sub"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textStyle="bold"
            android:padding="15dp"
            android:id="@+id/btn7"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textStyle="bold"
            android:id="@+id/btn8"
            android:padding="15sp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:id="@+id/btn9"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:textStyle="bold"
            android:id="@+id/btndiv"
            android:padding="15dp"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_effect"
            android:padding="15dp"
            android:text="@string/dot"
            android:textSize="25sp"
            android:id="@+id/btndot"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textStyle="bold"
            android:padding="15sp"
            android:id="@+id/btnzero"
            android:textSize="25sp"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="25sp"
            android:id="@+id/btnmul"
            tools:ignore="ButtonStyle"
            android:background="@drawable/click_effect">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_effect"
            android:padding="15dp"
            android:text="@string/equal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/btnequal"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>